# BazaarPlusPlus

./: .gitignore  README.md  README_en.md  main.py  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.test.json
backend/: __init__.py
bazaarplusplus-installer/src-tauri/: Cargo.toml  build.rs  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
bazaarplusplus-installer/src-tauri/.cargo/: config.toml
bazaarplusplus-installer/src-tauri/capabilities/: default.json
bazaarplusplus-installer/src-tauri/icons/: icon.icns
bazaarplusplus-installer/src-tauri/resources/: app-bootstrap.json
bazaarplusplus-installer/src-tauri/resources/SourceForBuild/: version
bazaarplusplus-installer/src-tauri/resources/stream/: overlay.css  overlay.html  overlay.js  settings.css  settings.html  settings.js
bazaarplusplus-installer/src-tauri/src/: config.rs  lib.rs  main.rs  tray.rs
bazaarplusplus-installer/src-tauri/src/commands/: app.rs  bepinex.rs  detect.rs  game.rs  game_process.rs  history.rs  install.rs  mod.rs  registry.rs  startup.rs  steam.rs  stream.rs  supporters.rs  vdf.rs
bazaarplusplus-installer/src-tauri/src/history/: dto.rs  files.rs  mapper.rs  mod.rs  queries.rs  repo.rs  screenshots.rs
bazaarplusplus-installer/src-tauri/src/services/: game_path.rs  game_process.rs  history.rs  macos_version.rs  mod.rs  path.rs  paths.rs  process_snapshot.rs  startup.rs  steam.rs  stream_window.rs  tempo.rs
bazaarplusplus-installer/src-tauri/src/stream/: http.rs  mod.rs  overlay_settings.rs  path_resolution.rs  server.rs  state.rs
bazaarplusplus-mod/: .rules  (+6 more)
(+599 files in other folders)
